tests/sksl/errors/VoidVariable.glsl
### Compilation failed:

error: 4: variables of type 'void' are not allowed
error: 5: variables of type 'void' are not allowed
error: 5: global variable initializer must be a constant expression
3 errors
